{
  "@@locale": "en",
  "appTitle": "Stalvi",
  "btnCancel": "Cancel",
  "btnClose": "Close",
  "btnContinue": "Continue",
  "btnDelete": "Delete",
  "btnNext": "Next",
  "btnOpen": "Open",
...
  "setAsDefault": "Set as Default",
  "startDate": "Start Date",
  "targetAmount": "Target Amount",
  "targetDate": "Target Date",
  "termsAndConditions": "Terms and Conditions",
  "tryAgain": "Try Again",
  "txnSuccessCreated": "Transaction created successfully!",
  "usernameLabel": "Username",
  "warning": "Warning",
  "authBiometricOptInEnable": "Enable Biometrics",
  "authBiometricOptInSkip": "Skip for Now",
  "authBiometricOptInSubtitle": "Use Fingerprint or FaceID to quickly and securely access your Stalvi account in the future.",
  "authBiometricOptInTitle": "Enable Biometric Login",
...
  "accountTypeCash": "Cash",
  "accountTypeOther": "Other",
  "accounts": "Accounts",
  "acrossAccountsCount": "{count, plural, =1{1 account} other{{count} accounts}}",
  "addCategoryTitle": "Add Category",
  "addTagTitle": "Add Tag",
  "addTransaction": "Add Transaction",
  "autoTxEditTitle": "Edit Automatic Transaction",
  "autoTxFormatEveryDays": "Every {days} days",
  "autoTxFormatMonthly": "Monthly",
  "autoTxFormatSpecificDay": "Every month on the {day}",
  "autoTxFormatWeekly": "Weekly",
  "autoTxFormatYearly": "Yearly",
...
  "autoTxRecurrenceMonthly": "Monthly (Every 30 days)",
  "autoTxRecurrenceWeekly": "Weekly (Every 7 days)",
  "autoTxRecurrenceYearly": "Yearly (Every 365 days)",
  "autoTxSavedMessage": "Automatic Transaction Saved",
  "autoTxSelectRecurrence": "Select Recurrence",
  "autoTxTemplateNameLabel": "Name",
  "btnSaveTransaction": "Save Transaction",
  "categoriesAndTags": "Categories & Tags",
  "categoryInUseByAutoTxMessage": "{name} is in use by automatic transactions and must be reassigned.",
  "@categoryInUseByAutoTxMessage": {
    "placeholders": {
      "name": {
        "type": "String"
...
  "filterSheetAllCategories": "All Categories",
  "filterSheetAllCurrencies": "All Currencies",
  "filterSheetAllTags": "All Tags",
  "filterSheetAllTypes": "All Types",
  "filterSheetAmountRange": "Amount Range",
  "filterSheetApply": "Apply Filters",
  "filterSheetCategory": "Category",
  "filterSheetClearAll": "Clear All",
  "filterSheetCurrency": "Currency",
  "filterSheetDateRange": "Date Range",
  "filterSheetMaxAmount": "Max Amount",
  "filterSheetMinAmount": "Min Amount",
  "filterSheetSelectDateRange": "Select Date Range",
  "filterSheetTag": "Tag",
  "filterSheetTitle": "Filter Transactions",
  "filterSheetTransferType": "Transfer",
  "filterSheetType": "Transaction Type",
  "filterTransfer": "Transfer",
  "income": "{count, plural, =1{Income} other{Incomes}}",
  "labelAccount": "Account",
  "labelCategory": "Category",
  "labelCategoryName": "Category Name",
  "labelDestinationAccount": "Destination Account",
  "labelFromAccount": "From Account",
  "labelOriginAccount": "Origin Account",
  "labelSelectAccount": "Select Account",
...
